[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyTrilium"
version = "1.0.4"
authors = [
  { name="perfectra1n", email="perf3ctsec@gmail.com" },
]
description = "A Python wrapper for the Trilium Notes API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'coloredlogs'
]
packages = [
    {include = "pytrilium"},
]

[project.urls]
"Homepage" = "https://github.com/perfectra1n/pytrilium"
"Bug Tracker" = "https://github.com/perfectra1n/pytrilium/issues"

[tool.black]
line-length = 120
target_version = ['py37', 'py38', 'py39']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"
