[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyTrilium"
version = "1.3.3"
authors = [
  { name="perfectra1n", email="perf3ctsec@gmail.com" },
]
description = "A Python wrapper for the Trilium Notes API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "coloredlogs",
    "importlib-metadata>=1.0; python_version < '3.8'"
]
# Package discovery is handled automatically by hatchling
# No need to specify packages explicitly

[project.urls]
"Homepage" = "https://github.com/perfectra1n/pytrilium"
"Bug Tracker" = "https://github.com/perfectra1n/pytrilium/issues"
"Repository" = "https://github.com/perfectra1n/pytrilium"
"Documentation" = "https://github.com/perfectra1n/pytrilium#readme"
"Changelog" = "https://github.com/perfectra1n/pytrilium/releases"

[project.optional-dependencies]
dev = [
    "black",
    "isort", 
    "flake8",
    "pytest",
    "build",
    "twine"
]

[tool.hatch.build.targets.wheel]
packages = ["pytrilium"]

[tool.hatch.build.targets.sdist]
include = [
    "/pytrilium",
    "/README.md",
    "/LICENSE"
]

[tool.black]
line-length = 120
target_version = ['py39', 'py310', 'py311', 'py312', 'py313']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"
